<resources>
    <string name="app_name">QS AppLab</string>
    <string name="welcome_what_s_your_name">Salut ! Quel est votre prénom</string>
    <string name="please_type_your_name">Entrez votre prénom</string>
    <string name="let_s_play">Lancer le quiz</string>
    <string name="question">Question ?</string>
    <string name="logo">Logo</string>
    <string name="title_activity_drawer">Mon Labo</string>
    <string name="navigation_drawer_open">Ouvrir le Menu</string>
    <string name="navigation_drawer_close">Fermer le Menu</string>
    <string name="nav_header_title">Ma première App Android</string>
    <string name="nav_header_subtitle">Quantical Solutions Mobile</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Paramètres</string>
    <string name="offline_message">Tu n\'es pas connecté...</string>

    <string name="accueil">Pas à pas</string>
    <string name="mon_jeu">Mon quiz</string>
    <string name="documentation">GitHub</string>
    <string name="gps">GPS</string>
    <string name="alt_accueil">activity</string>
    <string name="accueil_title">Liste des activités que tu vas implémenter</string>
    <string name="emptyactivity">Empty Activity</string>
    <string name="navigationdraweractivity">Navigation Drawer Activity</string>
    <string name="mapsacitvity">Maps Acitvity</string>
    <string name="settingsactivity">Settings Activity</string>
    <string name="loginactivity">Login Activity</string>
    <string name="mobadsactivity">Mob Ads Activity</string>
    <string name="accueil_side_ch1">Si vous choisissez <b>Empty Activity</b>, vous pouvez choisir si vous souhaitez ou non qu\'Android Studio génère un fichier de mise en page pour l\'activité. Si vous choisissez l\'option de fichier de mise en page, Android Studio créera un fichier de mise en page, par opposition à deux fichiers de mise en page en cas d\'<b>Empty Activity</b>, et aucun fichier de ressources de menu.</string>
    <string name="accueil_side_ch2">Le menu latéral de navigation Android est un menu coulissant à gauche utilisé pour afficher les liens importants de l\'application. Le menu latéral de navigation facilite la navigation entre ces liens. Il n\'est pas visible par défaut et il doit être ouvert en glissant de gauche ou en cliquant sur son icône dans l\'ActionBar.</string>
    <string name="accueil_side_ch3">Le SDK <b>Maps</b> pour Android vous permet d\'ajouter des cartes à votre application à partir des données Google Maps. L\'API gère automatiquement l\'accès aux serveurs <b>Google Maps</b>, le téléchargement des données, l\'affichage des cartes et la réponse aux gestes de l\'utilisateur sur les cartes. Vous pouvez également utiliser les appels d\'API pour ajouter des repères, des polygones et des superpositions à une carte de base, ainsi que pour modifier la vue de l\'utilisateur pour une zone donnée.</string>
    <string name="accueil_side_ch4">L\'activité <b>Settings</b> peut être ajoutée directement à partir des modèles <b>Android Studio</b> avec tout le code nécessaire ajouté à l\'activité. Dans Android Studio, allez dans File ⇒ Activity ⇒ <b>Settings Activity</b>. Cela crée les préférences de ressources xml nécessaires sous le répertoire res ⇒ xml.</string>
    <string name="accueil_side_ch5">L\'activité <b>Login</b> est l\'une des choses les plus courantes de la plupart des applications est l\'activité de connexion. Pour avoir une <b>Login Activity</b> dans votre projet de studio Android, c\'est très simple. Pour implémenter une <b>Login Activity</b>, vous devez créer ou ouvrir un projet de studio Android, lui donner un nom et appuyer sur <b>Suivant</b> pour le panneau de configuration.</string>
    <string name="accueil_side_ch6">Les bannières publicitaires occupent une place dans la mise en page d\'une application, en haut ou en bas de l\'écran de l\'appareil. Ils restent à l\'écran pendant que les utilisateurs interagissent avec l\'application et peuvent s\'actualiser automatiquement après un certain temps.</string>
</resources>