<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_accueil">

    <fragment
        android:id="@+id/nav_accueil"
        android:name="com.quantical.android_experience.views.AccueilFragment"
        android:label="@string/accueil"
        tools:layout="@layout/fragment_accueil" />

    <fragment
        android:id="@+id/nav_jeu"
        android:name="com.quantical.android_experience.views.JeuFragment"
        android:label="@string/mon_jeu"
        tools:layout="@layout/fragment_jeu" />

    <fragment
        android:id="@+id/nav_documentation"
        android:name="com.quantical.android_experience.views.DocumentationFragment"
        android:label="@string/documentation"
        tools:layout="@layout/fragment_documentation" />
</navigation>