<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/activity_main_greeting_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/welcome_what_s_your_name"/>

    <EditText
        android:id="@+id/activity_main_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/please_type_your_name"/>

    <Button
        android:id="@+id/activity_main_play_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="30dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/let_s_play"/>

</LinearLayout>